--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,28 +1,35 @@
-@for (movie of movies; track movies) {
-  <div class="uk-card uk-card-secondary uk-card-hover uk-card-body eni-movie-card"
-       [ngStyle]="{ 'background-image': 'url(' + movie.cover + ')' }">
-    <div class="top-infos">
-      <h2>{{ movie.title }}</h2>
-      <p>{{ movie.year }}, {{ movie.author }} </p>
-      <p>{{ movie.duration }} min</p>
-    </div>
-    <div class="star-rating">
-      @for (i of [1, 2, 3, 4, 5]; track i) {
+<section class="uk-section uk-section-default uk-height-viewport">
+  <div class="uk-container">
 
-        @if (i <= movie.rating) {
-          <i class="fa-solid fa-star"></i>
-        } @else {
-          <i class="fa-regular fa-star"></i>
+    <h2 class="uk-text-bold uk-h1 uk-margin-remove-adjacent uk-margin-remove-top">Films</h2>
+
+    <div class="uk-overflow-auto">
+      <div class="uk-child-width-1-2@s uk-grid-match" uk-grid>
+
+        @for (movie of movies; track movie) {
+          <div class="uk-card uk-card-secondary uk-card-hover uk-card-body eni-movie-card"
+               [ngStyle]="{ 'background-image': 'url(' + movie.cover + ')' }">
+            <div class="eni-dark-overlay"></div>
+            <div>
+              <div class="eni-movie-card-header">
+                <h1>{{ movie.title }}</h1>
+                <h4>{{ movie.year }}, {{ movie.author }}</h4>
+                <span class="minutes">{{ movie.duration }} min</span>
+                <!-- Staring -->
+                <app-star-rating [rating]="movie.rating"></app-star-rating>
+                <p class="type">{{ movie.genre }}</p>
+              </div>
+              <div class="eni-movie-card-desc">
+                <p class="text">
+                  {{ movie.synopsis }}
+                </p>
+              </div>
+            </div>
+          </div>
+
         }
-      }
-    </div>
 
-    <div>
-      <p>Catégorie : {{ movie.genre }}</p>
-      <p>Résumé : {{ movie.synopsis }}</p>
+      </div>
     </div>
-
   </div>
-}
-
-
+</section>
