--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -4,6 +4,9 @@
     <h2 class="uk-text-bold uk-h1 uk-margin-remove-adjacent uk-margin-remove-top">Films</h2>
 
     <div class="uk-overflow-auto">
+
+      <button (click)="callApi()" class="uk-button uk-button-primary uk-width-1-1 uk-margin-small-bottom">Rafraîchir les films</button>
+
       <div class="uk-child-width-1-2@s uk-grid-match" uk-grid>
 
         @for (movie of movies; track movie) {
