--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,11 +1,11 @@
 <section class="uk-section uk-section-default uk-height-viewport">
   <div class="uk-container">
 
-    <h2 class="uk-text-bold uk-h1 uk-margin-remove-adjacent uk-margin-remove-top">Films</h2>
+    <h2 class="uk-text-bold uk-h1 uk-margin-remove-adjacent uk-margin-remove-top">{{ 'title.movies'  | translate }}</h2>
 
     <div class="uk-overflow-auto">
 
-      <button (click)="callApi()" class="uk-button uk-button-primary uk-width-1-1 uk-margin-small-bottom">Rafraîchir les films</button>
+      <button (click)="callApi()" class="uk-button uk-button-primary uk-width-1-1 uk-margin-small-bottom">{{'btn.movie_call_api' | translate}}</button>
 
       <div class="uk-child-width-1-2@s uk-grid-match" uk-grid>
 
